# conposel

./: .envrc  .gitignore  app.py  default.nix  flake.nix  package-lock.json  package.json  pyproject.toml  server.js  tailwind.config.js
conposel/: app.py
public/: index.html
public/css/: style.css
public/js/: main.js
src/: input.css
static/: input.css  output.css  script.js  style.css
templates/: index.html
