[project]
name = "conposel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dash>=3.0.4",
  "dash-bootstrap-components>=2.0.2",
  "numpy>=2.2.5",
  "opencv-python>=4.11.0.86",
  "pandas>=2.2.3",
  "pillow>=11.2.1",
  "plotly>=6.0.1",
]

[dependency-groups]
docs = []
test = [
    "pytest>=8.3.5",
]
